[gd_scene load_steps=2 format=2]

[ext_resource path="res://verticalTabs.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
margin_right = 640.0
margin_bottom = 720.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Text" type="Label" parent="Control"]
margin_right = 640.0
margin_bottom = 720.0
text = "panel1"
align = 1
valign = 1

[node name="Button" type="Button" parent="Control" groups=["tabs"]]
margin_left = 640.0
margin_right = 686.0
margin_bottom = 148.0
text = "one"

[node name="Text2" type="Label" parent="Control"]
margin_right = 640.0
margin_bottom = 720.0
text = "panel2"
align = 1
valign = 1

[node name="Button2" type="Button" parent="Control" groups=["tabs"]]
margin_left = 640.0
margin_top = 148.0
margin_right = 686.0
margin_bottom = 296.0
text = "one"

[node name="Text3" type="Label" parent="Control"]
margin_right = 640.0
margin_bottom = 720.0
text = "panel3"
align = 1
valign = 1

[node name="Button3" type="Button" parent="Control" groups=["tabs"]]
margin_left = 640.0
margin_top = 296.0
margin_right = 686.0
margin_bottom = 444.0
text = "one"

[node name="Text4" type="Label" parent="Control"]
margin_right = 640.0
margin_bottom = 720.0
text = "panel4"
align = 1
valign = 1

[node name="Button4" type="Button" parent="Control" groups=["tabs"]]
margin_left = 640.0
margin_top = 444.0
margin_right = 686.0
margin_bottom = 592.0
text = "one"
